--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
