--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
+    "node-schedule": "^2.1.1",
     "path": "^0.12.7",
     "yt-dlp-exec": "^1.0.2"
   }
