--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
+    "bin-version-check-cli": "^3.0.0",
     "fs": "^0.0.1-security",
     "node-schedule": "^2.1.1",
     "path": "^0.12.7",
