--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
+  "name": "yt-downloader",
+  "version": "1.0.0",
+  "description": "YouTube downloader with yt-dlp and ffmpeg",
+  "main": "perfect.js",
   "engines": {
     "node": "20.x"
   },
+  "scripts": {
+    "start": "node perfect.js"
+  },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "bin-version-check-cli": "^3.0.0",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
-    "bin-version-check-cli": "^3.0.0",
     "fs": "^0.0.1-security",
     "node-schedule": "^2.1.1",
     "path": "^0.12.7",
